cinema5d-7; add component and scss for header

--- a/compositionProject.json
+++ b/compositionProject.json
@@ -6,6 +6,17 @@
         "style.css",
         "style.scss"
       ]
+    },
+    "components": {
+      "header": {
+        "style.module.scss": "file"
+      },
+      "footer": {
+        "style.module.scss": "file"
+      },
+      "navigation": {
+        "style.module.scss": "file"
+      }
     }
   },
   ".editorconfig": "",
